--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
 anyhow = "1"
+
+[profile.release]
+strip = true
