--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-clap = { version = "4.4.18", features = ["derive"] }
+clap = { version = "4.4.18", features = ["derive", "string", "cargo"] }
 figment = { version = "0.10.10", features = ["env", "json", "toml"] }
+schemars = "1"
 redis = { version = "0.30", features = ["aio", "sentinel", "tokio-comp", "tokio-rustls-comp", "tls-rustls-insecure"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1"
