--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "redito"
 version = "0.1.0"
 edition = "2024"
+repository = "https://github.com/felipou/redito"
+description = "Redis Toolkit"
 
 [dependencies]
 clap = { version = "4.4.18", features = ["derive", "string", "cargo"] }
