--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 repository = "https://github.com/felipou/redito"
 description = "Redis Toolkit"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 clap = { version = "4.4.18", features = ["derive", "string", "cargo"] }
